@@ -1996,6 +1996,17 @@
       </component>
     </version>
   </module>
+  <module name="msm">
+    <version release="gnome-2.6">
+      <component name="msm" dir="msm" group="extras">
+        <podir dir="po"/>
+        <potname name="msm.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="planner">
     <version release="gnome-2.6">
       <component name="planner" dir="planner" group="office">
