@@ -1,3 +1,7 @@
+2003-12-28  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added msm.
+
 2003-12-19  Danilo Šegan  <dsegan@gmx.net>
 
 	* ignored-lang-list: Added "de@bavarian".
